--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,6 +7,8 @@ spring.rabbitmq.port=5666
 spring.rabbitmq.username=device
 spring.rabbitmq.password=device2019
 spring.rabbitmq.exchange=spk.device
+spring.rabbitmq.consumer-prefetch=5 
+spring.rabbitmq.concurrent-consumer=2
 spring.rabbitmq.enable=true
 # redis
 spring.redis.host=localhost
