--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,6 +28,6 @@ sparking.pool.keep-alive=360
 sparking.pool.queue-capacity=100
 # move broad
 sparking.lock.move-broad.active=true
-sparking.lock.move-broad.url=https://localhost:10000
-sparking.lock.move-broad.app-id=sdfsdf
-sparking.lock.move-broad.secret=sdfsdf
+sparking.lock.move-broad.url=https://api.movebroad.cn/
+sparking.lock.move-broad.app-id=b269bccf9c0ba501b9a8aee3eba3ef2a
+sparking.lock.move-broad.secret=a111aed1a123b3dfa2f1d8683e2742761b217650
