--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,11 +12,10 @@ spring.rabbitmq.concurrent-consumer=2
 spring.rabbitmq.enable=true
 # redis
 spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.port=6378
 spring.redis.password=
 spring.redis.database=0
 spring.redis.timeout=6000
-spring.redis.lettuce.pool.enabled=true
 spring.redis.lettuce.pool.max-active=8
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=4
@@ -31,3 +30,5 @@ sparking.lock.move-broad.active=true
 sparking.lock.move-broad.url=https://api.movebroad.cn/
 sparking.lock.move-broad.app-id=b269bccf9c0ba501b9a8aee3eba3ef2a
 sparking.lock.move-broad.secret=a111aed1a123b3dfa2f1d8683e2742761b217650
+# bs interface
+sparking.bs.url=http://192.168.1.133:10088/spms/secretKey/getInfoByOtherProjectNo
