--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,7 +13,6 @@ spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
 spring.redis.database=0
-spring.redis.lettuce.pool.enabled=true
 spring.redis.lettuce.pool.max-active=8
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=4
@@ -28,3 +27,5 @@ sparking.lock.move-broad.active=true
 sparking.lock.move-broad.url=https://api.movebroad.cn/
 sparking.lock.move-broad.app-id=b269bccf9c0ba501b9a8aee3eba3ef2a
 sparking.lock.move-broad.secret=a111aed1a123b3dfa2f1d8683e2742761b217650
+# bs url
+sparking.bs.url=https://bs.suparking.cn/spms/secretKey/getInfoByOtherProjectNo
