接入CTP平板锁

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -30,5 +30,9 @@ sparking.lock.move-broad.active=true
 sparking.lock.move-broad.url=https://api.movebroad.cn/
 sparking.lock.move-broad.app-id=b269bccf9c0ba501b9a8aee3eba3ef2a
 sparking.lock.move-broad.secret=a111aed1a123b3dfa2f1d8683e2742761b217650
+# ctp
+sparking.lock.ctp.active=true
+sparking.lock.ctp.secret=AAAAAAAAAAA
+
 # bs interface
 sparking.bs.url=http://192.168.1.133:10088/spms/secretKey/getInfoByOtherProjectNo
