--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -27,5 +27,8 @@ sparking.lock.move-broad.active=true
 sparking.lock.move-broad.url=https://api.movebroad.cn/
 sparking.lock.move-broad.app-id=b269bccf9c0ba501b9a8aee3eba3ef2a
 sparking.lock.move-broad.secret=a111aed1a123b3dfa2f1d8683e2742761b217650
+# ctp
+sparking.lock.ctp.active=true
+sparking.lock.ctp.secret=AAAAAAAAAAA
 # bs url
 sparking.bs.url=https://bs.suparking.cn/spms/secretKey/getInfoByOtherProjectNo
