--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -32,7 +32,13 @@ sparking.lock.move-broad.app-id=b269bccf9c0ba501b9a8aee3eba3ef2a
 sparking.lock.move-broad.secret=a111aed1a123b3dfa2f1d8683e2742761b217650
 # ctp
 sparking.lock.ctp.active=true
-sparking.lock.ctp.secret=AAAAAAAAAAA
+sparking.lock.ctp.secret=86B0EC24F4613BCE15AB6296DBE412BC
 
 # bs interface
-sparking.bs.url=http://192.168.1.133:10088/spms/secretKey/getInfoByOtherProjectNo
+sparking.bs.url=http://192.168.1.133:10088/spms
+
+# shard data interface
+sparking.shard.data.url=http://192.168.1.9:20003/data-center
+
+# lock device
+sparking.ctp.lock.url=http://8.133.185.147:4020
