--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,12 +7,15 @@ spring.rabbitmq.port=5666
 spring.rabbitmq.username=device
 spring.rabbitmq.password=device2019
 spring.rabbitmq.exchange=spk.device
+spring.rabbitmq.consumer-prefetch=5 
+spring.rabbitmq.concurrent-consumer=2
 spring.rabbitmq.enable=true
 # redis
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=
+spring.redis.host=redis
+spring.redis.port=25803
+spring.redis.password=SPK2022!
 spring.redis.database=0
+spring.redis.timeout=6000
 spring.redis.lettuce.pool.max-active=8
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=4
@@ -30,8 +33,12 @@ sparking.lock.move-broad.secret=a111aed1a123b3dfa2f1d8683e2742761b217650
 # ctp
 sparking.lock.ctp.active=true
 sparking.lock.ctp.secret=86B0EC24F4613BCE15AB6296DBE412BC
-# bs url
-sparking.bs.url=https://bs.suparking.cn/spms/secretKey/getInfoByOtherProjectNo
+sparking.lock.ctp.factoryId = 14
+# lock device
+sparking.lock.ctp.url=http://8.133.185.147:4020
+
+# bs interface
+sparking.bs.url=https://bs129.suparking.cn/spms
 
 # shard data interface
-sparking.shard.data.url=http://192.168.1.9:20003/data-center
+sparking.shard.data.url=https://data/data-center
