领泊结构体组织

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -37,6 +37,15 @@ sparking.lock.ctp.factoryId = 14
 # lock device
 sparking.lock.ctp.url=http://8.133.185.147:4020
 
+# ling park
+sparking.lock.lingpark.active=true
+sparking.lock.lingpark.appid=
+# ????id
+sparking.lock.lingpark.comid=
+# sign key.
+sparking.lock.lingpark.secret=
+
+
 # bs interface
 sparking.bs.url=http://192.168.1.133:10088/spms
 
