--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -37,6 +37,14 @@ sparking.lock.ctp.factoryId = 14
 # lock device
 sparking.lock.ctp.url=http://8.133.185.147:4020
 
+# ling park
+sparking.lock.lingpark.active=true
+sparking.lock.lingpark.appid=
+# ????id
+sparking.lock.lingpark.comid=
+# sign key.
+sparking.lock.lingpark.secret=
+
 # bs interface
 sparking.bs.url=https://bs129.suparking.cn/spms
 
